--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "modules/vsftpd"]
 	path = modules/vsftpd
 	url = https://github.com/thias/puppet-vsftpd.git
+[submodule "modules/lemmus"]
+	path = modules/lemmus
+	url = https://github.com/naturalis/puppet-lemmus.git
