--- a/hieradata/default.yaml
+++ b/hieradata/default.yaml
@@ -1,3 +1,10 @@
+sensu::server: true
+sensu::rabbitmq_host: '172.16.1.11'
+sensu::rabbitmq_password: 'sensu'
+sensu::rabbitmq_port: 5672
+
+
+
 ftpserver::ftpd_banner: 'FTP Server'
 ftpserver::users:
   user1:
