--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "modules/ipt-toolkit"]
 	path = modules/ipt-toolkit
 	url = https://github.com/naturalis/puppet-ipt-toolkit.git
+[submodule "modules/sensuclient"]
+	path = modules/sensuclient
+	url = https://github.com/naturalis/puppet-sensuclient
