Added submodule medialibrary

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "modules/sensuclient"]
 	path = modules/sensuclient
 	url = https://github.com/naturalis/puppet-sensuclient
+[submodule "modules/medialibrary"]
+	path = modules/medialibrary
+	url = https://github.com/naturalis/puppet-medialibrary
