--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "modules/medialibrary"]
 	path = modules/medialibrary
 	url = https://github.com/naturalis/puppet-medialibrary
+[submodule "modules/foreman_proxy"]
+	path = modules/foreman_proxy
+	url = https://github.com/theforeman/puppet-foreman_proxy.git
